# pokedex-cli

./: .gitignore  README.md  justfile  pyproject.toml  setup.py
pokedex/: __init__.py  formats.py  main.py  pokemon.py
pokedex/database/: get.py  queries.py
pokedex/graphics/: cell_buffer.py  colors.py  draw.py
